--- a/travel-map/src/components/organisms/InfoTab/InfoTabFuture.scss
+++ b/travel-map/src/components/organisms/InfoTab/InfoTabFuture.scss
@@ -25,9 +25,3 @@
     padding: 1rem 0;
   }
 }
-
-@media screen and (max-width: 550px) {
-  .info-tab-future__content {
-    gap: 0.5rem !important;
-  }
-}
